
This file shows the changes in recent releases of TinyMCE for MODx. The most current release is usually the 
development release, and is only shown to give an idea of what's currently in the pipeline.

TinyMCE 4.0.3
====================================
- Added setting to toggle between uncompressed TinyMCE JS library
- Fixed random issue with element being loaded twice
- Fixed JSON issue with PHP installs less than 5.3.0
- Fixed issues with richtext TVs

TinyMCE 4.0.2
====================================
- Fixed issues with contextual persistence in file browser

TinyMCE 4.0.1
====================================
- Updated TinyMCE to 3.3.8, fixed random bugs
- Added cirkuit skin and made it default
- Cleaned up code execution in plugin

TinyMCE 4.0.0
====================================
- Added lexicon support for tiny system settings
- Added support for template plugin, can now use tiny.template_list setting
- Fixed bug with editor theme
- Added language strings for dialogs
- Fixed bug with language being ignored
- Fixed bug with TVs on non-document panels as TVs
- Fixed bug where TinyMCE was ignoring save syncing
- Adjusted rte loading logic to properly load right data for TV rtes
- Fixed bug with mce tags being added in, cleanup setting now defaults to true
- Added modxlink tinymce plugin to add searchability to link popup
- Fixed bug where css_selectors setting wasnt working
- Added resolver to auto-set which_editor to TinyMCE and use_editor to 1 when installing
- Added svn props to changelog

TinyMCE 3.2.7.0 (LastChangedRevision: 581, LastChangedDate: 2009-11-06 08:20:21 -0600 (Fri, 06 Nov 2009))
====================================
- Optimized lexicon to work with Revo RC-2
- Adjusted resolver code to work with Revo RC2
- [#TINYMCE-52] Added skin and skin_variant properties for TinyMCE; also set the default to the silver o2k7 theme
- [#TINYMCE-53] Added tiny.custom_buttons5 setting for 5th row of buttons options