@@ -12,16 +12,20 @@ var Tiny = {
             }
         });
     }
-    
+
+    ,loadedTVs: []
     ,onTVLoad: function() {
         var els = Ext.query('.modx-richtext');
         var ed;
         Ext.each(els,function(el,i) {
-            el = Ext.get(el);        
-            tinyMCE.execCommand('mceAddControl', false, el.dom.id);
-            ed = tinyMCE.get(el.dom.id);
-            if (ed) {
-                ed.onChange.add(this.onChange);
+            if (this.loadedTVs.indexOf(el) == -1) {
+                el = Ext.get(el);
+                tinyMCE.execCommand('mceAddControl', false, el.dom.id);
+                ed = tinyMCE.get(el.dom.id);
+                if (ed) {
+                    ed.onChange.add(this.onChange);
+                }
+                this.loadedTVs.push(el);
             }
         },this);
     }
@@ -42,29 +46,35 @@ var Tiny = {
         }
     }
     
-    ,onChange: function(ed,e) {
-        Ext.getCmp('modx-panel-resource').markDirty();
-        
-        if (typeof(tinyMCE) != 'undefined') {
+    ,onChange: function(ed,e) {        
+        if (!Ext.isEmpty(tinyMCE)) {
+            ed.save();
             try {
-                tinyMCE.triggerSave();
-            } catch (e) {};
-
+                var ta = Ext.get(ed.id);
+                if (ta) {
+                    ta.dom.value = ed.getContent();
+                }
+            } catch (e) {}
+/*
             var ta = Ext.get(ed.id);
             if (ta && ta.setValue && ed && ed.getContent) {
                 MODx.sleep(3);
                 ta.setValue(ed.getContent());
             } else if (ed) {
-                MODx.sleep(3); /* give DOM time to collect itself */
+                MODx.sleep(3); // give DOM time to collect itself
                 ta = Ext.get(ed.id);
-                MODx.sleep(3); /* why we have to do this here i have no clue, but it works when this is here */
+                MODx.sleep(3); // why we have to do this here i have no clue, but it works when this is here
                 if (ta) {
                     ta.dom.value = ed.getContent();
                 }
             } else {
                 Ext.isSafari || Ext.isWebKit ? console.log(ed) : null;
             }
+            */
         }
+        //console.log(Ext.getCmp('modx-panel-resource').getForm().getValues());
+
+        Ext.getCmp('modx-panel-resource').markDirty();
     }
     
     ,loadBrowser: function(fld, url, type, win) {
