@@ -4,6 +4,8 @@ development release, and is only shown to give an idea of what's currently in th
 
 TinyMCE 4.0.3
 ====================================
+- Fixed bug where TinyMCE wasn't working with TVs
+- Moved config array to properties array to prevent collusions of config vars in tiny JS
 - Added setting to toggle between uncompressed TinyMCE JS library
 - Fixed random issue with element being loaded twice
 - Fixed JSON issue with PHP installs less than 5.3.0
